--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="logo-removebg-preview.png" class="w-50" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="logo.png" class="w-50" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -51,7 +51,7 @@
             <img src="lince.webp" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="pantera.jpg" class="d-block w-100" alt="...">
+            <img src="pantera-2.webp" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="leao.webp" class="d-block w-100" alt="...">
